Alignment fix

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav li {
 }
 
 nav a {
-  transition: color 0.3s ease-in;
+  transition: color 0.3s ease-in,
 }
 
 nav a:hover {
@@ -198,16 +198,47 @@ nav .dropdown:hover .dropdown-list {
   margin: 5% auto;
 }
 
+.page-title {
+  font-size: 2.5rem;
+  background-color: var(--orange);
+  color: #fff;
+  text-align: center;
+  margin-bottom: 15px;
+  padding: 5px;
+}
+
+.page-body {
+  font-family: 'Noto Serif JP', serif;
+  font-size: 1.2rem;
+  text-align: center;
+  text-transform: none;
+}
+
+.sm-desc {
+  margin-top: 10px;
+  font-size: 1.1rem;
+  font-style: italic;
+}
+
+.about-copy {
+  font-family: 'Noto Serif JP', serif;
+  font-size: 1.1rem;
+  line-height: 1.7rem;
+  text-indent: 25px;
+  text-transform: none;
+}
+
 .about-img {
   float: left;
   max-width: 30%;
-  margin: 0 30px 30px 0;
+  margin: 0 30px 20px 0;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
 }
 
 .btn-container {
   clear: left;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .btn-container a:first-child {
@@ -221,16 +252,15 @@ nav .dropdown:hover .dropdown-list {
   font-size: 1.3rem;
   font-weight: 700;
   padding: 10px 25px;
-  border-radius: 100vh;
   border: 4px solid var(--orange);
+  transition: transform 0.5s ease-in-out;
 }
 
 .btn:hover {
-  background-color: #fff;
-  color: var(--orange);
+  transform: scale(105%, 105%);
 }
 
-/* WEB PROJ PAGE */
+/* PROJECTS PAGES (web + photo) */
 
 .project-card {
   display: grid;
@@ -248,7 +278,7 @@ nav .dropdown:hover .dropdown-list {
 }
 
 .project-title {
-  padding: 10px 0 10px 15px;
+  padding: 10px 15px 10px 15px;
   margin-bottom: 10px;
 }
 
@@ -264,6 +294,13 @@ nav .dropdown:hover .dropdown-list {
 
 .project-desc p {
   font-family: "Noto Serif JP", serif;
+  text-transform: none;
+  font-size: 1.15rem;
+  line-height: 1.7rem;
+}
+
+.project-desc p a:hover {
+  text-decoration: underline;
 }
 
 .project-link {
@@ -274,7 +311,7 @@ nav .dropdown:hover .dropdown-list {
 }
 
 .project-link:hover {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   transform: scale(105%, 105%);
 }
 
@@ -408,11 +445,32 @@ footer a:hover {
 
   .about-img {
     max-width: 40%;
-    margin-bottom: 10px;
+  }
+
+  .project-card {
+    grid-template-columns: 1fr;
+  }
+
+  .project-desc {
+    padding-left: 0;
+    max-width: 100%;
+  }
+
+  .project-title h2 {
+    font-size: 1.9rem;
+  }
+
+  .project-title h3 {
+    font-size: 1.3rem;
   }
 }
 
 @media screen and (max-width: 550px) {
+
+  /* -----------------------------
+  need to add fix for footer layout 
+  ----------------------------- */
+
   h1 {
     font-size: 1.5rem;
   }
@@ -439,9 +497,21 @@ footer a:hover {
     opacity: 100%;
   }
 
+  .page-title {
+    font-size: 2rem;
+  }
+
+  .page-body {
+    font-size: 1rem;
+  }
+
+  .sm-desc {
+    font-size: 1rem;
+  }
+
   .about-img {
     max-width: 40%;
-    padding: 0 5px 5px 0;
+    margin: 0 15px 15px 0;
   }
 
   .btn-container a:first-child {
